# BrowerAI

./: .env  .gitattributes  .gitignore  .markdownlint.json  AI_LEARNING_IMPLEMENTATION.md  AI_LEARNING_ROADMAP.md  AI_LEARNING_SUMMARY.md  CHANGELOG.md  COMMIT_MESSAGE.md  COMPLETE_1000_URLS_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DUAL_SANDBOX_ENHANCEMENT_COMPLETION.md  DUAL_SANDBOX_ENHANCEMENT_PLAN.md  DUAL_SANDBOX_ENHANCEMENT_PROGRESS.md  DUAL_SANDBOX_ENHANCEMENT_QUICK_REFERENCE.md  DUAL_SANDBOX_ENHANCEMENT_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  JS_DEOBFUSCATOR_INTEGRATION.md  Justfile  LEARNING_FROM_1000_URLS_REPORT.md  LEARNING_MODULE_COMPLETION_REPORT.md  LEARNING_MODULE_FIX_SUMMARY.md  LEARNING_MODULE_QUICK_START.md  LICENSE  MIXED_MODEL_COMPARISON_REPORT.md  MIXED_MODEL_v1_vs_v2_COMPARISON.md  PHASE2_SUMMARY.md  PHASE3_COMPLETION_STATUS.txt  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_FINAL_REPORT.md  PRECOMMIT_SETUP.md  PROJECT_IMPROVEMENT_REPORT.md  QUICKREF.md  QUICK_COMMANDS_1000_URLS.sh  README.md  REAL_1000_URLS_TRAINING_REPORT.md  REAL_WEBSITE_QUICK_COMMANDS.md  (+22 more)
crates/browerai/: Cargo.toml
crates/browerai-ai-core/: Cargo.toml  README.md
crates/browerai-ai-core/docs/: BUGFIX_REPORT.md  COMPLETION_REPORT.md  DELIVERY_SUMMARY.md  DEVELOPER_GUIDE.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README_NEW.md  SECURE_DEPENDENCY_PLAN.md
crates/browerai-ai-core/src/: advanced_metrics.rs  advanced_monitor.rs  ai_trait.rs  candle_loader.rs  code_predictor.rs  config.rs  feedback_pipeline.rs  feedback_training_loop.rs  gpu_support.rs  hot_reload.rs  inference.rs  lib.rs  model_manager.rs  model_provider.rs  onnx_model.rs  onnx_model_real.rs  onnx_provider.rs  performance_monitor.rs  reporter.rs  resilience.rs  runtime.rs  smart_features.rs  tech_model_library.rs  trainable_model.rs
crates/browerai-ai-core/tests/: integration_tests.rs
crates/browerai-ai-integration/: Cargo.toml  README.md
crates/browerai-ai-integration/docs/: HYBRID_JS_ORCHESTRATION.md
crates/browerai-ai-integration/src/: ai_js_generator.rs  hybrid_analyzer.rs  integration.rs  js_orchestrator.rs  lib.rs  onnx_js_generator.rs
crates/browerai-ai-integration/tests/: js_orchestrator_tests.rs
crates/browerai-core/: Cargo.toml  README.md
crates/browerai-core/src/: code_type.rs  config.rs  error.rs  health.rs  lib.rs  metrics.rs  source_loc.rs  traits.rs
crates/browerai-css-parser/: Cargo.toml  README.md
crates/browerai-css-parser/benches/: css_parser_benchmarks.rs
crates/browerai-css-parser/src/: lib.rs
crates/browerai-deobfuscation/: Cargo.toml
crates/browerai-deobfuscation/src/: advanced_deobfuscation.rs  ai_deobfuscator.rs  ast_deobfuscation.rs  deobfuscation.rs  enhanced_deobfuscation.rs  enhanced_deobfuscator.rs  lib.rs  onnx_inference.rs  semantic_model.rs
crates/browerai-devtools/: Cargo.toml  README.md
crates/browerai-devtools/src/: lib.rs  metrics_adapter.rs  panel_ui.rs  protocol.rs  reskin.rs  webview.rs
crates/browerai-dom/: Cargo.toml  README.md
crates/browerai-dom/src/: api.rs  deobfuscating_sandbox.rs  events.rs  lib.rs  sandbox.rs
crates/browerai-html-parser/: Cargo.toml  README.md
crates/browerai-html-parser/benches/: html_parser_benchmarks.rs
crates/browerai-html-parser/src/: enhanced_parser.rs  lib.rs
crates/browerai-intelligent-rendering/: Cargo.toml  README.md
crates/browerai-intelligent-rendering/src/: dual_sandbox_renderer.rs  generation.rs  lib.rs  llm_integration.rs  model_orchestrator.rs  reasoning.rs  renderer.rs  site_understanding.rs  validation.rs  website_analyzer.rs  website_learning_engine.rs
crates/browerai-js-analyzer/: Cargo.toml  README.md
crates/browerai-js-analyzer/src/: analysis_pipeline.rs  ast_provider.rs  ast_traverser.rs  call_graph.rs  controlflow_analyzer.rs  dataflow_analyzer.rs  enhanced_call_graph.rs  extractor.rs  framework_detector.rs  lib.rs  loop_analyzer.rs  performance_optimizer.rs  scope_analyzer.rs  semantic.rs  swc_extractor.rs  types.rs  unified_call_graph.rs
crates/browerai-js-parser/: Cargo.toml  README.md
crates/browerai-js-parser/src/: lib.rs  orchestrator.rs
crates/browerai-js-parser/tests/: orchestrator_tests.rs
crates/browerai-js-v8/: Cargo.toml  README.md
crates/browerai-js-v8/src/: lib.rs  lib.rs.backup  sandbox.rs
crates/browerai-learning/: Cargo.toml  FRAMEWORK_KNOWLEDGE.md  README.md
crates/browerai-learning/src/: ab_testing.rs  advanced_deobfuscation.rs  ast_deobfuscation.rs  async_client.rs  auth_handler.rs  browser_automation.rs  browser_tech_detector.rs  code_generator.rs  code_verifier.rs  complete_inference_pipeline.rs  continuous_loop.rs  data_structure_inference.rs  deobfuscation.rs  dual_sandbox_learner.rs  enhanced_deobfuscation.rs  execution_validator.rs  external_resource_analyzer.rs  feedback.rs  framework_knowledge.rs  high_fidelity_generator.rs  improved_code_generator.rs  integration_test.rs  js_formatter.rs  learning_quality.rs  lib.rs  metrics.rs  online_learning.rs  personalization.rs  real_website_learner.rs  semantic_comparator.rs  semantic_renaming.rs  v8_tracer.rs  variable_semantics.rs  versioning.rs  wasm_analyzer.rs  website_deobfuscator.rs  website_generator.rs  website_learner.rs  websocket_analyzer.rs  websocket_monitor.rs  (+1 more)
crates/browerai-metrics/: Cargo.toml  README.md
crates/browerai-metrics/src/: lib.rs
crates/browerai-ml/: Cargo.toml
crates/browerai-ml/src/: lib.rs
crates/browerai-network/: Cargo.toml  README.md
crates/browerai-network/src/: cache.rs  deep_crawler.rs  deobfuscation.rs  http.rs  lib.rs
crates/browerai-plugins/: Cargo.toml  README.md
crates/browerai-plugins/src/: lib.rs  loader.rs  registry.rs
crates/browerai-renderer-core/: Cargo.toml  README.md
crates/browerai-renderer-core/src/: engine.rs  js_executor.rs  layout.rs  lib.rs  paint.rs
crates/browerai-renderer-predictive/: Cargo.toml  README.md
crates/browerai-testing/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_css_parser.rs  fuzz_html_parser.rs  fuzz_js_parser.rs
(+2037 files in other folders)
