[package]
name = "browerai"
version = "0.1.0"
edition = "2021"
authors = ["BrowerAI Contributors"]
description = "AI-powered browser with autonomous HTML/CSS/JS parsing and rendering"
license = "MIT"

[features]
default = []
ai = ["ort"]

[dependencies]
# ONNX Runtime for AI inference (optional)
ort = { version = "2.0.0-rc.10", optional = true }

# HTML/CSS/JS parsing
html5ever = "0.27"
markup5ever_rcdom = "0.3"
cssparser = "0.33"
selectors = "0.25"

# Native Rust JavaScript parser and engine (instead of V8)
# Using boa_parser - pure Rust ECMAScript parser from boa engine
# Using boa_engine - pure Rust JavaScript execution engine
boa_parser = "0.20"
boa_ast = "0.20"
boa_interner = "0.20"
boa_engine = "0.20"

# Serialization for model configs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client for website learning
reqwest = { version = "0.11", features = ["blocking"] }

# URL parsing for deep crawling
url = "2.5"

# Timestamp for feedback data
chrono = "0.4"

# Regular expressions for deobfuscation
regex = "1.10"

# Swc - Fast TypeScript/JavaScript compiler (Phase 2)
# 用于完整的 AST 解析，支持 JSX 和 TypeScript
swc_core = "0.88"

[dev-dependencies]
tempfile = "3.8"
