[workspace]
resolver = "2"
members = [
    "crates/browerai-core",
    "crates/browerai-dom",
    "crates/browerai-html-parser",
    "crates/browerai-css-parser",
    "crates/browerai-js-parser",
    "crates/browerai-js-analyzer",
    "crates/browerai-js-v8",
    "crates/browerai-ai-core",
    "crates/browerai-ai-integration",
    "crates/browerai-renderer-core",
    "crates/browerai-renderer-predictive",
    "crates/browerai-intelligent-rendering",
    "crates/browerai-learning",
    "crates/browerai-network",
    "crates/browerai-devtools",
    "crates/browerai-testing",
    "crates/browerai-plugins",
    "crates/browerai-ml",
    "crates/browerai-metrics",
    "crates/browerai",
]

[workspace.package]
edition = "2021"
authors = ["BrowerAI Contributors"]
license = "MIT"
repository = "https://github.com/vistone/BrowerAI"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client (use rustls instead of openssl)
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
url = "2.5"

# Timestamp
chrono = "0.4"

# Regular expressions
regex = "1.10"

# HTML/CSS parsing
html5ever = "0.27"
markup5ever_rcdom = "0.3"
cssparser = "0.33"
selectors = "0.25"

# JavaScript parsing and execution
boa_parser = "0.20"
boa_ast = "0.20"
boa_interner = "0.20"
boa_engine = "0.20"
swc_core = "54.0"

# Tch (PyTorch bindings for Rust)
tch = { version = "0.14", features = ["download-libtorch"] }

# Force vendored OpenSSL for crates that still require native TLS (e.g., tch download helper)
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9.111", features = ["vendored"] }

# ONNX Runtime (optional)
ort = "2.0.0-rc.10"

# Dev dependencies
tempfile = "3.8"

# Internal workspace crates
browerai-core = { path = "crates/browerai-core" }
browerai-dom = { path = "crates/browerai-dom" }
browerai-html-parser = { path = "crates/browerai-html-parser" }
browerai-css-parser = { path = "crates/browerai-css-parser" }
browerai-js-parser = { path = "crates/browerai-js-parser" }
browerai-js-analyzer = { path = "crates/browerai-js-analyzer" }
browerai-js-v8 = { path = "crates/browerai-js-v8" }
browerai-ai-core = { path = "crates/browerai-ai-core" }
browerai-ai-integration = { path = "crates/browerai-ai-integration" }
browerai-renderer-core = { path = "crates/browerai-renderer-core" }
browerai-renderer-predictive = { path = "crates/browerai-renderer-predictive" }
browerai-intelligent-rendering = { path = "crates/browerai-intelligent-rendering" }
browerai-learning = { path = "crates/browerai-learning" }
browerai-ml = { path = "crates/browerai-ml" }
browerai-network = { path = "crates/browerai-network" }
browerai-devtools = { path = "crates/browerai-devtools" }
browerai-testing = { path = "crates/browerai-testing" }
browerai-plugins = { path = "crates/browerai-plugins" }
browerai-metrics = { path = "crates/browerai-metrics" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true


