[package]
name = "browerai-ai-integration"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI integration for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
browerai-ai-core = { workspace = true }
browerai-html-parser = { workspace = true }
browerai-css-parser = { workspace = true }
browerai-js-parser = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[features]
default = []
ai = []

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
