[package]
name = "browerai-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and utilities for BrowerAI browser engine"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
md5 = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
