[package]
name = "browerai-css-parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CSS parser for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
cssparser = { workspace = true }
selectors = { workspace = true }

[features]
default = []
ai = []

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
