[package]
name = "browerai-css-parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CSS parser for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
browerai-ai-core = { workspace = true, optional = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = "0.1"
cssparser = { workspace = true }
selectors = { workspace = true }

[features]
default = []
ai = ["browerai-ai-core"]

[dev-dependencies]
env_logger = { workspace = true }
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "css_parser_benchmarks"
harness = false
tempfile = { workspace = true }
