[package]
name = "browerai-intelligent-rendering"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intelligent rendering for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
browerai-renderer-core = { workspace = true }
browerai-ai-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
