[package]
name = "browerai-js-analyzer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JavaScript deep analysis for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
browerai-js-parser = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
boa_parser = { workspace = true }
boa_ast = { workspace = true }
boa_interner = { workspace = true }
swc_core = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.19"

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
