[package]
name = "browerai-js-v8"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "V8 JavaScript engine integration for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

# V8 JavaScript engine bindings
v8 = "142.2.0"
serde_v8 = "0.286.0"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
