[package]
name = "browerai-learning"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Learning system for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
browerai-html-parser = { workspace = true }
browerai-css-parser = { workspace = true }
browerai-js-parser = { workspace = true }
browerai-renderer-core = { workspace = true }
browerai-js-analyzer = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
