[package]
name = "browerai-learning"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Learning system for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
browerai-html-parser = { workspace = true }
browerai-css-parser = { workspace = true }
browerai-js-parser = { workspace = true }
browerai-renderer-core = { workspace = true }
browerai-js-analyzer = { workspace = true }
browerai-deobfuscation = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
url = { workspace = true }
base64 = "0.22"
http = "1.0"
async-trait = "0.1"
handlebars = "4.5"
headless_chrome = { version = "1.0", optional = true }

[features]
default = []
browser = ["headless_chrome"]

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
# Testing framework
rstest = "0.18"
# Async testing support
tokio = { workspace = true, features = ["full"] }
# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }
[[bench]]
name = "learning_benchmarks"
harness = false
path = "../../benches/learning_benchmarks.rs"