[package]
name = "browerai-ml"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "BrowerAI ML toolkit using tch-rs for training/inference/generation"

[dependencies]
browerai-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tch = { workspace = true }
openssl-sys = { workspace = true, features = ["vendored"] }

[features]
default = []
# Enable CUDA by setting TORCH_CUDA_VERSION environment variable when building libtorch
cuda = []
