[package]
name = "browerai-network"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Network layer for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
