[package]
name = "browerai-testing"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing utilities for BrowerAI"

[dependencies]
browerai-core = { workspace = true }
browerai-html-parser = { workspace = true }
browerai-css-parser = { workspace = true }
browerai-js-parser = { workspace = true }
browerai-network = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
markup5ever_rcdom = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
